			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

27-Nov-2001
~~~~~~~~~~~
Manpage is now generated automatically from DocBook source.
Short forms for many find expressions, such as -d for IsDir (suggested by
(Andras Mohari).

26-Nov-2001
~~~~~~~~~~~
More Gtk+-1.3.11 support, including use of the new message dialog.
When the filer loses the primary selection, display the selected items
shaded, but don't unselect them (Andras Mohari).

24-Nov-2001
~~~~~~~~~~~
Updated to Gtk+-1.3.11.

23-Nov-2001
~~~~~~~~~~~
Show the current run action for a file in the Info box (Stephen Watson).

21-Nov-2001
~~~~~~~~~~~
If a panel applet quits then it is removed from the panel, instead of being
replaced by a Restart button.

16-Nov-2001
~~~~~~~~~~~
With Gtk+-2.0 and the 'Unique windows' option on, reshow the existing window
instead of destroying it and creating a new one (suggested by Greg Spath).

15-Nov-2001
~~~~~~~~~~~
Changes to the French translation (Thierry Godefroy and Vincent Lefevre).

14-Nov-2001
~~~~~~~~~~~
Code tidying in menu.c (Bernard Jungen).

13-Nov-2001
~~~~~~~~~~~
Opening a filer window from the Set Icon dialog turns thumbnails display
on (suggested by Francesco Bochicchio).
Right-clicking the Help toolbar button reuses the same window.

12-Nov-2001
~~~~~~~~~~~
Made some strings easier to translate, fixed a problem with translating a blank
string, and changed the details toolbar button to leave the size alone (Andras
Mohari).
Improved key handling (key presses were sometimes ignored).
Bugfix: A very long and narrow icon could make the filer try to scale to a
	width or height of zero (Andras Mohari).

09-Nov-2001
~~~~~~~~~~~
Allow current directory and selection to be stored with Ctrl+[0-9] and
retrieved by pressing [0-9] (suggested by Jakub Turski). The groups are not
saved yet.

08-Nov-2001
~~~~~~~~~~~
Don't use re_set_syntax() on systems that don't have it (reported by
Couderc Damien).