@@ -232,8 +232,10 @@ static GtkItemFactoryEntry filer_menu_def[] = {
 {">" N_("Disk Usage"),		NULL, usage, 0, NULL},
 {">" N_("Permissions"),		NULL, chmod_items, 0, NULL},
 {">" N_("Find"),		NULL, find, 0, NULL},
-{N_("Select All"),	    	NULL, select_all, 0, NULL},
-{N_("Clear Selection"),		NULL, clear_selection, 0, NULL},
+{N_("Select"),	    		NULL, NULL, 0, "<Branch>"},
+{">" N_("Select All"),	    	NULL, select_all, 0, NULL},
+{">" N_("Clear Selection"),	NULL, clear_selection, 0, NULL},
+{">" N_("Select If..."),	NULL, mini_buffer, MINI_SELECT_IF, NULL},
 {N_("Options..."),		NULL, menu_show_options, 0, NULL},
 {N_("New"),			NULL, NULL, 0, "<Branch>"},
 {">" N_("Directory"),		NULL, new_directory, 0, NULL},
@@ -251,7 +253,6 @@ static GtkItemFactoryEntry filer_menu_def[] = {
 {">",				NULL, NULL, 0, "<Separator>"},
 {">" N_("Enter Path..."),	"slash", mini_buffer, MINI_PATH, NULL},
 {">" N_("Shell Command..."),	NULL, mini_buffer, MINI_SHELL, NULL},
-{">" N_("Select If..."),	NULL, mini_buffer, MINI_SELECT_IF, NULL},
 {">",				NULL, NULL, 0, "<Separator>"},
 {">" N_("Show ROX-Filer Help"), "F1", menu_rox_help, 0, NULL},
 };
