@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+29-Nov-2001
+~~~~~~~~~~~
+Moved 'Select All', 'Clear Selection' and 'Select If...' to a new 'Select'
+submenu.
+
 27-Nov-2001
 ~~~~~~~~~~~
 Manpage is now generated automatically from DocBook source.
